# YoloTouchHelp

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: build.yml
app/: build.gradle.kts  debug.keystore
app/src/androidTest/java/com/xunlei/ai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/xunlei/ai/: IRemoteInjector.aidl
app/src/main/assets/: dialog_disclaimer.html  dialog_import_model.html  float_menu.html  main_ui.html
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/daemon/: root_daemon.cpp
app/src/main/cpp/src/inference/: aimbot.cpp  inference_engine.h  litert_engine.cpp  onnx_engine.cpp  onnx_engine.h  qnn_engine.cpp
app/src/main/cpp/src/injection/: gyro_core.cpp  gyro_core.h  touch_core.cpp  touch_core.h  uinput_inject.cpp
app/src/main/java/com/xunlei/ai/controller/: AimController.kt  TriggerController.kt
app/src/main/java/com/xunlei/ai/inference/: JniCallBack.kt  KalmanObjectTracker.kt  TfliteClassifier.kt
app/src/main/java/com/xunlei/ai/injector/: RootInjectorClient.kt  ShizukuInjectorClient.java  TouchInjector.kt  TouchInjectorInterface.kt  UinputInjector.java
app/src/main/java/com/xunlei/ai/manager/: ConfigManager.kt  InferenceManager.kt  LicenseManager.kt  OverlayManager.kt  T3Verify.java
app/src/main/java/com/xunlei/ai/model/: AimingState.kt  AreaConfig.kt  BezierMover.kt  DetectionInfo.kt
app/src/main/java/com/xunlei/ai/service/: FloatService.kt  RemoteInjectorService.java
app/src/main/java/com/xunlei/ai/ui/: MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/xunlei/ai/ui/dialog/: ActivationDialog.kt
app/src/main/java/com/xunlei/ai/util/: LluaCrypto.kt  ProjectionHolder.kt  UpdateChecker.kt
app/src/main/java/com/xunlei/ai/view/: AreaSettingsView.kt  FloatBallView.kt  GuiPanelView.kt  OverlayCanvasView.kt  TouchDisplayView.kt  TriggerOverlayView.kt  VolumeKeyController.kt
app/src/main/java/com/yolotouchhelp/aimbot/controller/: AimController.kt  TriggerController.kt
app/src/main/java/com/yolotouchhelp/aimbot/injector/: RootInjectorClient.kt
app/src/main/java/com/yolotouchhelp/aimbot/manager/: ConfigManager.kt  LicenseManager.kt
app/src/main/java/com/yolotouchhelp/aimbot/model/: AimingState.kt
app/src/main/java/com/yolotouchhelp/aimbot/service/: FloatService.kt
app/src/main/java/com/yolotouchhelp/aimbot/ui/: MainActivity.kt
app/src/main/java/com/yolotouchhelp/aimbot/ui/dialog/: ActivationDialog.kt
app/src/main/java/com/yolotouchhelp/aimbot/util/: LluaCrypto.kt
app/src/main/java/com/yolotouchhelp/aimbot/view/: AreaSettingsView.kt  BezierCurveView.kt  GuiPanelView.kt  OverlayCanvasView.kt
app/src/main/res/drawable/: bg_btn_activate.xml  bg_dialog.xml  bg_edit.xml
app/src/main/res/layout/: activity_activation.xml  dialog_activation.xml  dialog_disclaimer.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xunlei/ai/: ExampleUnitTest.kt
gradle/: libs.versions.toml
